--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "module": "es/index.js",
   "browser": "dist/g6ChartPlugin.min.js",
   "files": [
