--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ace-gremlin-editor",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "基于 Ace 的 Gremlin 编辑器",
   "keywords": [
     "ace",
@@ -26,7 +26,7 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "module": "es/index.js",
   "browser": "dist/g6ChartPlugin.min.js",
   "files": [
