--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ace-gremlin-editor",
-  "version": "0.0.13-beta.3",
+  "version": "0.0.14",
   "description": "基于 Ace 的 Gremlin 编辑器",
   "keywords": [
     "ace",
