--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
     },
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
   },
   "include": [
